@@ -17,7 +17,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <java.version>1.8</java.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <java.version>11</java.version>
     </properties>
     <dependencies>
 
@@ -49,6 +51,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.13.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -65,6 +73,44 @@
             <version>4.5.10</version>
         </dependency>
 
-       
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.69</version>
+        </dependency>
+        <!-- des aes 相关-->
+        <dependency>
+            <groupId>org.puristframework.boot</groupId>
+            <artifactId>purist-boot-core-crypto</artifactId>
+            <version>1.2.2.RC-M38</version>
+        </dependency>
+
+
+
+<!--        <dependency>-->
+
+<!--            <groupId>javax.xml.bind</groupId>-->
+
+<!--            <artifactId>jaxb-api</artifactId>-->
+
+<!--            <version>2.4.0-b180725.0427</version>-->
+
+<!--        </dependency>-->
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                    <compilerArgs>
+                        <arg>--add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
+
+            </plugin>
+        </plugins>
+    </build>
 </project>
